--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CalendarActivity"></activity>
+        <activity android:name=".PanicAttack"></activity>
+        <activity android:name=".CalendarActivity" />
         <activity android:name=".NewJournalEntry" />
         <activity
             android:name=".MainActivity"
