--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.applandeo:material-calendar-view:1.4.0'
+    implementation 'androidx.biometric:biometric:1.0.0-alpha04'
 }
