--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mentalhealth">
 
+    <uses-permission android:name="android.permission.USE_BIOMETRIC"
+        android:requiredFeature="true"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
