--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.preference:preference:1.1.0-alpha05'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.applandeo:material-calendar-view:1.4.0'
-    implementation 'androidx.biometric:biometric:1.0.0-alpha04'
+    implementation 'androidx.biometric:biometric:1.0.0-beta02'
+
+    //implementation 'androidx.biometric:biometric:1.0.0-alpha04'
 }
