--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mentalhealth">
 
-    <uses-permission android:name="android.permission.USE_BIOMETRIC"
-        android:requiredFeature="true"/>
+    <uses-permission
+        android:name="android.permission.USE_BIOMETRIC"
+        android:requiredFeature="false" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PanicAttack"></activity>
+        <activity android:name=".Settings"></activity>
+        <activity android:name=".PanicAttack" />
         <activity android:name=".CalendarActivity" />
         <activity android:name=".NewJournalEntry" />
         <activity
